--- a/Practica3/memoria/bibliografia.bib
+++ b/Practica3/memoria/bibliografia.bib
@@ -1,7 +1,37 @@
-@online{outlier,
-  author = {Muammad Ryan},
-  title = {How to Cluster and Detect Outlier at The Same Time},
-  year = 2018,
-  url = {https://medium.com/datadriveninvestor/how-to-clustering-and-detect-outlier-at-the-same-time-30576acd75d0},
-  urldate = {1-11-2020}
+@Misc{paciente,
+  author =   {Ministerio de Sanidad, Gobierno de España},
+  title =    {ESTRATEGIA DE DETECCIÓN PRECOZ, VIGILANCIA Y CONTROL DE COVID-19},
+  howpublished = {\url{https://www.mscbs.gob.es/profesionales/saludPublica/ccayes/alertasActual/nCov/documentos/COVID19_Estrategia_vigilancia_y_control_e_indicadores.pdf}},
+  month =    nov,
+  year =     2020
+}
+
+@Misc{poblacion,
+  author =   {Ministerio de Sanidad, Gobierno de España},
+  title =    {ESTRATEGIA NACIONAL PARA LA COVID 19},
+  howpublished = {\url{https://www.mscbs.gob.es/profesionales/saludPublica/ccayes/alertasActual/nCov/documentos/COVID19_Estrategia_vigilancia_y_control_e_indicadores.pdf}},
+  month =    nov,
+  year =     2020
+}
+
+
+@article{fuzzy,
+  author = {Singh, Harpreet and Gupta, Madan and Meitzler, Thomas and Hou, Zeng-Guang and Garg, Kumkum and Solo, Ashu and Zadeh, Lotfi},
+  year = {2013},
+  month = {08},
+  pages = {},
+  title = {Real-Life Applications of Fuzzy Logic},
+  volume = {2013},
+  journal = {Advances in Fuzzy Systems},
+  doi = {10.1155/2013/581879}
+}
+
+@article{fuzzygame,
+  author = {Köse, Utku},
+  year = {2012},
+  month = {01},
+  pages = {510-517},
+  title = {Developing a fuzzy logic based game system},
+  volume = {3},
+  journal = {Computer Technology and Application}
 }
