subir nuevos resultados

--- a/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
+++ b/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
@@ -117,12 +117,13 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
 
 \begin{itemize}
 
-    \item \textbf{Incidencia acumulada de casos diagnosticados en 14 días} (IA-14): Casos confirmados en 14 días *100.000 / número de habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}.
+    \item \textbf{Incidencia acumulada de casos diagnosticados en 14 días} (IA-14): Casos confirmados en 14 días *100.000 / número de habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-14} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/ia_ac_14.png}
       \caption{IA-14}
+      \label{IA-14}
     \end{figure}
 
     \item \textbf{Incidencia acumulada de casos diagnosticados en 7 días} (IA-7): Casos confirmados en 7 días *100.000 / número de habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 1 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
@@ -209,7 +210,7 @@ Todas las reglas son del tipo \textit{AND} menos la primera que es del tipo \tex
 \multicolumn{1}{|c|}{Regla 13} & - & - & Bajo & Alto & - & - & - & Considerar \\ \hline
 \multicolumn{1}{|c|}{Regla 14} & - & - & - & - & Alto & - & - & Considerar \\ \hline
 \end{tabular}
-\end{center}
+\end{center
 
 
 \section{Sistema borroso: Prueba PCR}
