subida neuvos resultados 2

--- a/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
+++ b/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
@@ -132,6 +132,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \centering
       \includegraphics[width=300px]{img/ia_ac_7.png}
       \caption{IA-7}
+      \label{IA-7}
     \end{figure}
 
     \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 14 días} (IA-14 65): Casos >= 65 años confirmados en 14 días *100.000 / número de habitantes >= 65 años. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 2 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
@@ -139,7 +140,8 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/ia_65_14.png}
-      \caption{IA-14}
+      \caption{IA-14 65}
+      \label{IA-14 65}
     \end{figure}
 
     \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 7 días} (IA-7 65): Casos >= 65 años confirmados en 7 días *100.000 / número de habitantes >= 65 años. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 3 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
@@ -148,6 +150,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \centering
       \includegraphics[width=300px]{img/ia_65_7.png}
       \caption{IA-7 65}
+      \label{IA-7 65}
     \end{figure}
 
     \item \textbf{Positividad global de las PDIA (Prueba Diagnóstica de Infección Activa) por semana} (PDIA): Número de pruebas con resultado positivo en 7 días *100 / Número de pruebas realizadas en 7 días. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 4 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
@@ -156,6 +159,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \centering
       \includegraphics[width=300px]{img/PDIA.png}
       \caption{PDIA}
+      \label{PDIA}
     \end{figure}
 
     \item \textbf{Ocupación de camas de cuidados críticos por casos de COVID-19} (UCI): Número de camas de cuidados críticos ocupadas por casos de COVID / Número de camas de cuidados críticos totales en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 5 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
@@ -164,6 +168,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \centering
       \includegraphics[width=300px]{img/camas_UCI.png}
       \caption{UCI}
+      \label{UCI}
     \end{figure}
 
     \item \textbf{Ocupación de camas de hospitalización por casos de COVID-19} (Camas):  Número de camas de hospitalización ocupadas por casos de COVID / Número total de camas de hospitalización en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 6 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
@@ -172,6 +177,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \centering
       \includegraphics[width=300px]{img/ocupacion_camas.png}
       \caption{Camas}
+      \label{Camas}
     \end{figure}
 
     \end{itemize}
