se habia fastidiado el .tex

--- a/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
+++ b/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
@@ -127,7 +127,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
     \end{figure}
 
     \item \textbf{Incidencia acumulada de casos diagnosticados en 7 días} (IA-7): Casos confirmados en 7 días *100.000 / número de habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 1 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-    
+
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/ia_ac_7.png}
@@ -136,7 +136,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
     \end{figure}
 
     \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 14 días} (IA-14 65): Casos >= 65 años confirmados en 14 días *100.000 / número de habitantes >= 65 años. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 2 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-    
+
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/ia_65_14.png}
@@ -145,7 +145,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
     \end{figure}
 
     \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 7 días} (IA-7 65): Casos >= 65 años confirmados en 7 días *100.000 / número de habitantes >= 65 años. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 3 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-    
+
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/ia_65_7.png}
@@ -154,7 +154,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
     \end{figure}
 
     \item \textbf{Positividad global de las PDIA (Prueba Diagnóstica de Infección Activa) por semana} (PDIA): Número de pruebas con resultado positivo en 7 días *100 / Número de pruebas realizadas en 7 días. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 4 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-    
+
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/PDIA.png}
@@ -163,7 +163,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
     \end{figure}
 
     \item \textbf{Ocupación de camas de cuidados críticos por casos de COVID-19} (UCI): Número de camas de cuidados críticos ocupadas por casos de COVID / Número de camas de cuidados críticos totales en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 5 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-    
+
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/camas_UCI.png}
@@ -172,7 +172,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
     \end{figure}
 
     \item \textbf{Ocupación de camas de hospitalización por casos de COVID-19} (Camas):  Número de camas de hospitalización ocupadas por casos de COVID / Número total de camas de hospitalización en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 6 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-    
+
     \begin{figure}[!h]
       \centering
       \includegraphics[width=300px]{img/ocupacion_camas.png}
@@ -183,7 +183,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
     \end{itemize}
 
 \subsection{Variable de salida}
-    
+
 Se establece como variable de salida el hecho de confinar o no una población en función de tres niveles diferenciados. \textit{No confinar, Considerar el confinamiento y Sí confinar}. Se hace hincapié en el sentido del valor \textit{Considerar el confinamiento} que indica a los responsables de confinar un territorio que sería recomendable hacerlo atendiendo únicamente a razones sanitarias, pero que existe capacidad de discusión de otro tipo de medidas que no perjudiquen en esa medida a los sectores productivos de la población.  La figura 7 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
 
 \begin{figure}[!h]
@@ -197,7 +197,7 @@ Se establece como variable de salida el hecho de confinar o no una población en
 Todas las reglas son del tipo \textit{AND} menos la primera que es del tipo \textit{OR}.
 
 \begin{center}
-  \hspace{-13mm}
+  \begin{adjustwidth}{-1.3cm}{}
 \begin{tabular}{c|c|c|c|c|c|c|c|c|}
   \cline{2-9}
                                 & IA-14 & IA-7 & IA-14 65 & IA-7 65 & PDI & UCI & Camas & \textbf{Confinar} \\ \hline
@@ -216,7 +216,9 @@ Todas las reglas son del tipo \textit{AND} menos la primera que es del tipo \tex
 \multicolumn{1}{|c|}{Regla 13} & - & - & Bajo & Alto & - & - & - & Considerar \\ \hline
 \multicolumn{1}{|c|}{Regla 14} & - & - & - & - & Alto & - & - & Considerar \\ \hline
 \end{tabular}
+\end{adjustwidth}
 \end{center}
+
 
 
 \section{Sistema borroso: Prueba PCR}
@@ -233,7 +235,7 @@ Un sistema que consiga resolver este problema de forma eficaz sería de gran ayu
 Las entradas del sistema seleccionadas son:
 
 \begin{itemize}
-  \item \textbf{Días desde primeros síntomas} (DDPS) figura ~\ref{DDPS}: representa el número de días que el paciente lleva con síntomas relacionados con el \textit{COVID-19}. Sus posibles valores son: \textit{Pocos}, \textit{Medios} y \textit{Muchos}.
+  \item \textbf{Días desde primeros síntomas} (DDPS) figura~\ref{DDPS}: representa el número de días que el paciente lleva con síntomas relacionados con el \textit{COVID-19}. Sus posibles valores son: \textit{Pocos}, \textit{Medios} y \textit{Muchos}.
 
   \begin{figure}[!h]
       \centering
@@ -242,7 +244,7 @@ Las entradas del sistema seleccionadas son:
       \label{DDPS}
   \end{figure}
 
-  \item \textbf{Prueba rápida} figura ~\ref{PR}: si el paciente ha dado positivo o negativo en una prueba rápida, por lo tanto sus valores son solo \textit{Sí} o \textit{No}. Si al paciente no se le ha realizado ninguna prueba rápida se representará con un 0,5.
+  \item \textbf{Prueba rápida} figura~\ref{PR}: si el paciente ha dado positivo o negativo en una prueba rápida, por lo tanto sus valores son solo \textit{Sí} o \textit{No}. Si al paciente no se le ha realizado ninguna prueba rápida se representará con un 0,5.
 
   \begin{figure}[!h]
       \centering
@@ -251,7 +253,7 @@ Las entradas del sistema seleccionadas son:
       \label{PR}
   \end{figure}
 
-  \item \textbf{PCR} figura ~\ref{PCR}: si el paciente ha dado positivo o negativo en una prueba PCR, al igual que en la variable anterior, sus valores son solo \textit{Sí} o \textit{No}. Si al paciente no se le ha realizado ninguna PCR se representará con un 0,5.
+  \item \textbf{PCR} figura~\ref{PCR}: si el paciente ha dado positivo o negativo en una prueba PCR, al igual que en la variable anterior, sus valores son solo \textit{Sí} o \textit{No}. Si al paciente no se le ha realizado ninguna PCR se representará con un 0,5.
 
   \begin{figure}[!h]
       \centering
@@ -260,7 +262,7 @@ Las entradas del sistema seleccionadas son:
       \label{PCR}
   \end{figure}
 
-  \item \textbf{UCI} figura ~\ref{UCI}: si el paciente tiene que ser ingresado en la UCI, posibles valores: \textit{Sí} o \textit{No}.
+  \item \textbf{UCI} figura~\ref{UCI}: si el paciente tiene que ser ingresado en la UCI, posibles valores: \textit{Sí} o \textit{No}.
 
   \begin{figure}[!h]
       \centering
@@ -269,7 +271,7 @@ Las entradas del sistema seleccionadas son:
       \label{UCI}
   \end{figure}
 
-  \item \textbf{Sospecha clínica} figura ~\ref{SC}: creencia del médico de si el paciente puede tener o no el \textit{COVID-19}. Toma valores de \textit{Baja}, \textit{Media} y \textit{Alta}.
+  \item \textbf{Sospecha clínica} figura~\ref{SC}: creencia del médico de si el paciente puede tener o no el \textit{COVID-19}. Toma valores de \textit{Baja}, \textit{Media} y \textit{Alta}.
 
   \begin{figure}[!h]
       \centering
@@ -287,7 +289,7 @@ Las entradas del sistema seleccionadas son:
       \label{DDCP}
   \end{figure}
 
-  \item \textbf{Síntomas} figura ~\ref{Sintomas}: indica el número de síntomas de \textit{COVID-19} que tiene el paciente. Puede tomar valores de \textit{Ninguno}, \textit{Alguno}, \textit{Varios} y \textit{Todos}.
+  \item \textbf{Síntomas} figura~\ref{Sintomas}: indica el número de síntomas de \textit{COVID-19} que tiene el paciente. Puede tomar valores de \textit{Ninguno}, \textit{Alguno}, \textit{Varios} y \textit{Todos}.
 
   \begin{figure}[!h]
       \centering
@@ -296,7 +298,7 @@ Las entradas del sistema seleccionadas son:
       \label{Sintomas}
   \end{figure}
 
-  \item \textbf{Uso mascarilla con no convivientes} (UMNC) figura ~\ref{UMNC}: si el paciente usa regularmente la mascarilla cuando se encuentra con personas con las que no convive, sus valores son solo \textit{Sí} o \textit{No}.
+  \item \textbf{Uso mascarilla con no convivientes} (UMNC) figura~\ref{UMNC}: si el paciente usa regularmente la mascarilla cuando se encuentra con personas con las que no convive, sus valores son solo \textit{Sí} o \textit{No}.
 
   \begin{figure}[!h]
       \centering
@@ -311,15 +313,21 @@ Las entradas del sistema seleccionadas son:
 
 \subsection{Variable de salida}
 
-Realizar test PCR
+Como la decisión a tomar es si se debe realizar o no una prueba PCR, la salida del sistema es la certeza que se tiene de si se debe realizar la prueba o no al paciente. Sus valores son \textit{Sí} o \textit{No} (figura~\ref{realizarPCR}). Además,
 
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=300px]{img/realizar_pcr.png}
+    \caption{Realizar PCR}
+    \label{realizarPCR}
+\end{figure}
 
 \subsection{Reglas}
 
 Todas las reglas son del tipo \textit{AND}.
 
 \begin{center}
-  \begin{adjustwidth}{-1.4cm}{}
+  \begin{adjustwidth}{-1.3cm}{}
 \begin{tabular}{c|c|c|c|c|c|c|c|c|c|}
   \cline{2-10}
                                 & DDPS & \begin{tabular}[c]{@{}c@{}}Prueba\\ Rápida\end{tabular} & PCR & UCI & \begin{tabular}[c]{@{}c@{}}Sospecha\\ Clínica\end{tabular} & DDCP & Síntomas & UMNC & \begin{tabular}[c]{@{}c@{}}\textbf{Realizar}\\ \textbf{PCR}\end{tabular} \\ \hline
